# census21api

./: .docscoveragerc  .gitignore  .nojekyll  CHANGES.html  CHANGES.md  CITATION.cff  Census21_CACD_Wrapper.py  Census21_CACD_call_testing.ipynb  Census_API_Test.ipynb  Interface.ipynb  Interface.py  Interface_example.ipynb  LICENSE  QA.html  QA.md  README.md  _quarto.yml  check_api_constants.py  check_constants.py  demo.ipynb  index.html  index.qmd  interface_example.ipynb  listings.json  pyproject.toml  requirements.txt  robots.txt  search.json  sitemap.xml  test_Census21_CACD_Wrapper.py
.github/workflows/: constants.yml  docs.yml  tests.yml
docs/how-to-guides/: index.html  index.qmd  query-categories.html  query-categories.ipynb  query-feature.html  query-feature.ipynb  query-population-types.html  query-population-types.ipynb  query-table.html  query-table.ipynb
docs/reference/: CensusAPI.html  index.html  index.qmd
docs/reference/api/: CensusAPI.html  index.html
docs/tutorials/: getting-started.html  getting-started.ipynb  index.html  index.qmd  installation.html  installation.qmd
site_libs/bootstrap/: bootstrap.min.css
src/: Census21_CACD_Wrapper.py  Interface.py
src/census21api/: __init__.py  constants.py  interface.py  wrapper.py
src/ons_c21_cacd/: Census21_CACD_Wrapper.py
tests/: __init__.py  strategies.py  test_examples.py  test_wrapper.py
