[project]
name = "census21api"
authors = [
    {name="Michaela Lawrence"},
    {name="Mac Agbenla"},
    {name="Lucy Astley-Jones"},
    {name="Rhodri Cavell"},
    {name="Ed Cuss"},
    {name="Fatima Hussain"},
    {name="Samantha Iacob"},
    {name="Richard Marshall"},
    {name="Joel Paull"},
    {name="Yunus Rabbani"},
    {name="Mollie Willson"},
    {name="Henry Wilde"},
]
description = "A package for custom dataset building using the 2021 census"
readme = "README.md"
requires-python = ">=3.8"
version = "0.0.1"
dependencies = [
    "pandas==2.0.3",
    "requests",
    "tqdm",
    "typing",
]

[project.optional-dependencies]
test = [
    "pytest",
]
lint = [
    "black",
    "ruff",
]
dev = [
    "census21api[test,lint]",
]

[project.urls]
homepage = "https://github.com/MichaelaLawrenceONS/Census21_CACD_Wrapper"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
