[project]
name = "census21api"
authors = [
    {name="Michaela Lawrence"},
    {name="Mac Agbenla"},
    {name="Lucy Astley-Jones"},
    {name="Rhodri Cavell"},
    {name="Ed Cuss"},
    {name="Fatima Hussain"},
    {name="Samantha Iacob"},
    {name="Richard Marshall"},
    {name="Joel Paull"},
    {name="Yunus Rabbani"},
    {name="Mollie Willson"},
    {name="Henry Wilde"},
]
description = "A package for querying the 2021 England and Wales Census API"
readme = "README.md"
requires-python = ">=3.8"
version = "0.0.1"
dependencies = [
    "pandas<2.1",
    "requests",
    "tqdm",
    "typing",
]

[project.optional-dependencies]
test = [
    "hypothesis",
    "pytest",
    "pytest-randomly",
]
lint = [
    "black",
    "ruff",
]
dev = [
    "census21api[test,lint]",
]

[project.urls]
homepage = "https://github.com/MichaelaLawrenceONS/Census21_CACD_Wrapper"

[tool.black]
line-length = 79

[tool.ruff]
exclude = ["src/census21api/interface.py"]
extend-select = ["I", "W"]
line-length = 79

[tool.ruff.isort]
known-first-party = ["census21api"]
