[project]
name = "census21api"
authors = [
    {name="Michaela Lawrence"},
    {name="Mac Agbenla"},
    {name="Lucy Astley-Jones"},
    {name="Rhodri Cavell"},
    {name="Ed Cuss"},
    {name="Fatima Hussain"},
    {name="Samantha Iacob"},
    {name="Richard Marshall"},
    {name="Joel Paull"},
    {name="Yunus Rabbani"},
    {name="Mollie Willson"},
    {name="Henry Wilde"},
]
description = "A package for querying the 2021 England and Wales Census API"
readme = "README.md"
requires-python = ">=3.8"
version = "0.0.1"
dependencies = [
    "pandas<2.1",
    "requests",
    "typing",
]

[project.optional-dependencies]
test = [
    "hypothesis",
    "pytest",
    "pytest-cov",
    "pytest-randomly",
]
lint = [
    "black<24",
    "ruff",
]
docs = [
    "nbval",
    "quartodoc>=0.5.0",
    "seaborn>=0.12.1"
]
dev = [
    "census21api[test,lint,docs]",
]

[project.urls]
homepage = "https://github.com/datasciencecampus/census21api"

[tool.black]
line-length = 79

[tool.ruff]
extend-select = ["I", "W"]
line-length = 79

[tool.ruff.isort]
known-first-party = ["census21api"]
